--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
+
     <style>
         /* --- 1. RESET & BASIC SETUP --- */
         * {
@@ -34,7 +38,8 @@
             --bg-color: #000000;
             --text-color: #ffffff;
             --accent-color: #333333;
-            --font-main: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            /* UPDATED FONT: Menggunakan Inter dari Google Fonts */
+            --font-main: 'Inter', Helvetica, Arial, sans-serif;
         }
 
         body {
