Update lightbox image source to logo_ambigram.png

--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
         <div class="close-modal hover-target" onclick="closeLightboxOnly()">&times;</div>
         <div class="modal-content-lightbox">
             <div id="lightboxTitle">DESIGN TITLE</div>
-            <img src="logo_web.png" alt="Loading..." id="lightboxLoader" class="loader-logo">
+            <img src="logo_ambigram.png" alt="Loading..." id="lightboxLoader" class="loader-logo">
             <img id="lightboxImg" src="" alt="Full View">
         </div>
     </div>
