Update title and Open Graph meta tags

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
-    <title>USAHADULU.COM | Digital Creative Services</title>
+    <title>USAHADULU STUDIO | Digital Creative Services</title>
     <meta name="description" content="Jasa Desain Grafis Underground, Logo, Apparel, Motion Graphic dan Web Invitation di Dumai. Estetika Streetwear & Dark Arts.">
     <meta name="keywords" content="Desain Grafis Dumai, Jasa Logo Metal, Streetwear Design, Web Undangan, Video Editing, Magos Streetwear, Jasa Desain Kaos">
     <meta name="author" content="Fajri Salam">
     <meta name="theme-color" content="#000000">
     
-    <meta property="og:title" content="USAHADULU.COM - Digital Creative Services">
+    <meta property="og:title" content="USAHADULU STUDIO - Digital Creative Services">
     <meta property="og:description" content="Visual Solution for Underground & Streetwear Brands.">
     <meta property="og:image" content="logo_web.png">
     <meta property="og:type" content="website">
@@ -1122,9 +1122,9 @@
             document.body.classList.toggle('no-scroll');
             const logoImg = document.getElementById('headerLogoImg');
             if (navOverlay.classList.contains('open')) {
-                logoImg.src = 'logo_ambigram.png';
-            } else {
                 logoImg.src = 'logo_web.png';
+            } else {
+                logoImg.src = 'logo_ambigram.png';
             }
         }
 
